gccida/c0/df_bb_rd_local_compute
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/df_bb_rd_local_compute/src/df.c:2106:4: error: expected ';' after expression
rtx insn; // [rsp+40h] [rbp-20h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/df_bb_rd_local_compute/src/df.c:2106:5: error: use of undeclared identifier 'insn'
rtx insn; // [rsp+40h] [rbp-20h] 
    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/df_bb_rd_local_compute/src/df.c:2109:17: error: expected identifier or '('
 struct bb_info = &df_0->bbs[bb->index]; 
                ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/df_bb_rd_local_compute/src/df.c:2110:7: error: use of undeclared identifier 'insn'
for ( insn = bb->head; ; insn = insn[1].fld[0].rtx ) 
      ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/df_bb_rd_local_compute/src/df.c:2110:26: error: use of undeclared identifier 'insn'
for ( insn = bb->head; ; insn = insn[1].fld[0].rtx ) 
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/df_bb_rd_local_compute/src/df.c:2110:33: error: use of undeclared identifier 'insn'
for ( insn = bb->head; ; insn = insn[1].fld[0].rtx ) 
                                ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/df_bb_rd_local_compute/src/df.c:2113:6: error: use of undeclared identifier 'insn'
if ( insn ) 
     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/df_bb_rd_local_compute/src/df.c:2114:6: error: use of undeclared identifier 'insn'
v3 = insn != bb->end[1].fld[0].rtx; 
     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/df_bb_rd_local_compute/src/df.c:2117:47: error: use of undeclared identifier 'insn'
if ( rtx_class[( unsigned __int16)*( _DWORD *)insn] == 105 ) 
                                              ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/df_bb_rd_local_compute/src/df.c:2119:30: error: use of undeclared identifier 'insn'
for ( def_link = df_0->insns[insn->fld[0].rtuint].defs; def_link; def_link = def_link->next ) 
                             ^
10 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/df_bb_rd_local_compute/src/obj/df.o] Error 1
